--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Calculadora de triângulos - Projeto STEAM</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="32x32" href="steamm.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="steamm-512.png">
-  <meta name="msapplication-TileImage" content="steamm-512.png">
+  <link rel="icon" type="image/jpg" sizes="32x32" href="steamm.jpg">
+  <link rel="icon" type="image/jpg" sizes="512x512" href="steamm-512.jpg">
+  <meta name="msapplication-TileImage" content="steamm-512.jpg">
   <style>
     :root{--bg:#f4f7fb;--card:#ffffff;--accent:#1976d2;--muted:#6b7280;--glass:rgba(25,118,210,0.06)}
     *{box-sizing:border-box}
@@ -482,3 +482,4 @@ svg, .svgwrap { touch-action: none; -ms-touch-action: none; }
     initDefault();
   </script></body>
 </html>
+
